compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_segment_size2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 100
expression: "case <<1>> { <<1:size(2)-size(8)>> -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case <<1>> { <<1:size(2)-size(8)>> -> 1 }

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:26
  │
1 │ case <<1>> { <<1:size(2)-size(8)>> -> 1 }
  │                          ^^^^^^^ This is an extra size specifier

Hint: This segment already has a size.
See: https://tour.gleam.run/data-types/bit-arrays/
